--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,6 @@
     "python.analysis.extraPaths": [
         "./src/lab",
         "./src"
-    ]
+    ],
+    "python.analysis.typeCheckingMode": "basic"
 }
